5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1846_1275.log
== TEST (2019-06-23 19:17:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:20:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:21:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:23:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = ones((a,7),dtype= int)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:24:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = ones((a,7),dtype= int)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:34:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = zeros((a),dtype= int)

for i in range(a):
	a[i] = sum(v[i:])

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 19:35:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = zeros((a),dtype= int)

for i in range(a):
	a[i] = sum(v[i,:])

print(a)
-- EXECUTION TIME:
1.11425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1275/main.py", line 10, in <module>
    a[i] = sum(v[i,:])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:35:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = zeros((a),dtype= int)

for i in range(a):
	a[i] = sum(v[i,:])

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:37:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = zeros((a),dtype= int)


	a[1] = sum(v[1,:])

print(a)
-- ERROR:
File "XXXX", line 10
    a[1] = sum(v[1,:])
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:38:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = zeros((a),dtype= int)

for i in range(a):
	v[i] = sum(v[i,:])

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 19:38:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = zeros((a),dtype= int)

for i in range(a):
	v[i] = sum(v[i,:])

print(v)
-- EXECUTION TIME:
0.967613
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1275/main.py", line 10, in <module>
    v[i] = sum(v[i,:])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 19:38:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = zeros((a),dtype= int)

for i in range(a):
	v[i] = sum(v[i,:])

print(v)
-- EXECUTION TIME:
0.964911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1275/main.py", line 10, in <module>
    v[i] = sum(v[i,:])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 19:38:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = zeros((a),dtype= int)

for i in range(a):
	v[i] = sum(v[i,:])

print(v)
-- EXECUTION TIME:
0.903201
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1275/main.py", line 10, in <module>
    v[i] = sum(v[i,:])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 19:38:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = zeros((a),dtype= int)

for i in range(a):
	v[i] = sum(v[i,:])

print(v)
-- EXECUTION TIME:
1.03522
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1275/main.py", line 10, in <module>
    v[i] = sum(v[i,:])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:38:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
v = zeros((a),dtype= int)

for i in range(a):
	v[i] = sum(v[i,:])

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:39:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
b = zeros((a),dtype= int)

for i in range(a):
	b[i] = sum(v[i,:])

print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 19:39:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
b = zeros((a),dtype= int)

for i in range(a):
	b[i] = sum(v[i,:])

print(b)
-- EXECUTION TIME:
0.930263
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:40:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("Digite as horas: ")))

a = shape(v)[0]
b = zeros((a),dtype= int)

for i in range(a):
	b[i] = sum(v[i,:])

print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
